feat: add seller registretion path
